Fix CSS lists overflowing widget height. Fix CSS borders

--- a/src/multi.css
+++ b/src/multi.css
@@ -1,23 +1,24 @@
 .multi-wrapper {
-		display: flex;
-		flex-direction: column;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
     width: 100%;
 }
 
 .multi-wraplists {
-		flex: 1 1 100px;
-		display: flex;
-		flex-direction: row;
+    flex: 1 1 100px;
+    display: flex;
+    flex-direction: row;
+    border-radius: 0 0 3px 3px;
+    border: 1px solid #ccc;
 }
 
 .multi-wrapper .non-selected-wrapper,
 .multi-wrapper .selected-wrapper {
-		flex: 1 1 50px;
+    flex: 1 1 50px;
     box-sizing: border-box;
     /* display: inline-block; */
-    /* height: 200px; */
+    height: 50px;
+    min-height: 100%;
     overflow-y: scroll;
     padding: 10px;
     vertical-align: top;
@@ -39,14 +40,14 @@
     font-weight: bold;
     margin-bottom: 5px;
     padding: 5px 10px;
-		user-select: none;
+    user-select: none;
 }
 
 .multi-wrapper .item {
     cursor: pointer;
     display: block;
     padding: 5px 10px;
-		user-select: none;
+    user-select: none;
 }
 
 .multi-wrapper .item:hover {
@@ -66,10 +67,11 @@
 }
 
 .multi-wrapper .search-input {
-		flex: 0 0 50px;
+    flex: 0 0 50px;
     border: 0;
-    border-bottom: 1px solid #ccc;
-    border-radius: 0;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    border-radius: 3px 3px 0 0;
     display: block;
     font-size: 1em;
     margin: 0;
@@ -80,22 +82,22 @@
 }
 
 .wrapper-low {
-	/* border: 1px solid red; */
-	display: flex;
-	flex-direction: row;
-	margin: 5px;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
 }
 
 .wrapper-low .controls {
-	/* border: 1px solid blue; */
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	width: 50%;
+  /* border: 1px solid blue; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 50%;
 }
 
 .wrapper-low .controls button {
-	flex: 0 1 auto;
+  flex: 0 1 auto;
 }
 
 .multi-wrapper .non-selected-wrapper .item.selected {
